Adding attributes to generated objects, adding type to name mapping on saving